[package]
name = "spin-wheel"
version = "0.1.0"
edition = "2021"



[dev-dependencies]
cargo-tarpaulin = "~0.20"
uuid = { version = "~1.0", features = ["serde", "v4"] }
mockall = "~0.11"

[dependencies]
actix-http = "3.3.1"
actix-rt = "2.8.0"
actix-web = "4.3.1"
async-trait = "0.1.58"
chrono = {version ="0.4.26",features = ["serde"]}
console_log = "1.0.0"
derive_more = "0.99.17"
diesel = { version = "2.1.0", features = ["postgres","r2d2","serde_json","chrono"] }
diesel_migrations = "2.1.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
failure = "0.1.8"
log =  { version = "0.4", features = ["std", "serde"] }
r2d2 = "0.8.10"
reqwest = "0.11.18"
serde = "1.0.163"
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = "1.28.2"
