[package]
name = "spin-wheel"
version = " 1.0.6"
edition = "2021"
ssl = ["openssl", "actix-server/ssl", "awc/ssl"]

[profile.release]
lto = true
panic = "abort"
opt-level = "z"
codegen-units = 1
strip = true

[dev-dependencies]
mockall = "~0.11"

[dependencies]
actix-http = "3.3.1"
actix-rt = "2.8.0"
actix-web = { version ="4.3.1", features=["rustls"] }
async-trait = "0.1.58"
awc = { version="3.1.1",features=["openssl"]}
base64 = "0.21.4"
chrono = {version ="0.4.26",features = ["serde"]}
console_log = "1.0.0"
derive_more = "0.99.17"
diesel = { version = "2.1.0", features = ["postgres","r2d2","serde_json","chrono"] }
diesel_migrations = "2.1.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
failure = "0.1.8"
local-ip-address = "0.5.6"
log =  { version = "0.4", features = ["std", "serde"] }
once_cell = "1.18.0"
r2d2 = "0.8.10"
rand = "0.8.5"
rustls = "0.21.6"
serde = "1.0.163"
serde_json = "1.0.96"
ssl = "0.1.0"
thiserror = "1.0.40"
utoipa = { version = "3.5.0", features = ["chrono", "actix_extras"] }
utoipa-swagger-ui = { version="3.1.5", features = ["actix-web"] }
